# sprinklergoose

./: .gitignore  README.md  docker-compose.dev.yml
.github/workflows/: docker.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  forecast.py  main.py  models.py  rainbird.py  scheduler.py  scheduler_db.py  weather.py  zone_config.py  zone_names.py
apps/api/tests/: conftest.py  scheduler_testkit.py  test_api.py  test_forecast_api.py  test_forecast_unit.py  test_pacing.py  test_quick_run.py  test_scheduler_api.py  test_scheduler_pg.py  test_scheduler_unit.py  test_weather_openmeteo.py  test_weather_unit.py  test_zone_enablement.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web-next/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/web-next/drizzle/: 0000_fair_runaways.sql  0001_pale_maggott.sql  0002_broken_orphan.sql  0003_lean_ozymandias.sql  0004_slippery_vin_gonzales.sql  0005_safe_ravenous.sql
apps/web-next/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  (+4 more)
apps/web-next/scripts/: seed.ts  stub-executor.mjs  stub-real-weather.mjs
apps/web-next/src/: proxy.ts
apps/web/scripts/: generate-icons.mjs
apps/web/src/: App.tsx  format.ts  styles.css  types.ts
deploy/k8s/: README.md  api.yaml  arp-pinner.yaml  namespace.yaml  secret.example.yaml  web-next.yaml  web.yaml
docs/: API.md  M1-SPEC.md  M2-SPEC.md  M3-SPEC.md  M4-MAP-SPEC.md  PRODUCT.md  ROADMAP.md
(+92 files in other folders)
