[project]
name = "rainbird-api"
version = "0.1.0"
description = "Local REST API for Rain Bird ESP-Me irrigation controller"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiohttp>=3.10",
    "pyrainbird>=6.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
